# pages/shared/dtos/email-route.ts
@@ -1,10 +1,13 @@
-import { EmailType } from "../enums/email-type";
 import { BaseDto } from "./base";
+import { EmailClass } from "@/enums/email-class";
 
 export class EmailRouteDto extends BaseDto {
   userId: number = 0;
-  email: string = '';
-  destination: string = '';
-  type: EmailType = EmailType.UNKNOWN;
+  email: string = "";
+  destination: string = "";
+  type: EmailClass = EmailClass.UNKNOWN;
   enabled: boolean = true;
+  drop: boolean = false;
+  received: number = 0;
+  sent: number = 0;
 }
