# workers/src/repositories/email-route.ts
@@ -1,4 +1,4 @@
-import { EmailType } from "@/enums/email-class";
+import { EmailClass } from "@/enums/email-class";
 import { EmailRouteEntity } from "../entities/email-route";
 import { IDatabase } from "../interfaces/database";
 import { BaseRepository } from "./base";
@@ -13,19 +13,6 @@ export class EmailRouteRepository extends BaseRepository<EmailRouteEntity> imple
     return 'email_routes';
   }
 
-  async getByEmailAndType(email: string, type: EmailType): Promise<EmailRouteEntity | null> {
-    const result = await this._db
-      .prepare(`SELECT * FROM ${this.tableName} WHERE email = ? AND type = ? AND enabled = 1`)
-      .bind(email, type)
-      .first<EmailRouteEntity>();
-
-    if (!result) {
-      return null;
-    }
-
-    return result;
-  }
-
   async create(route: EmailRouteEntity): Promise<void> {
     const sql = `INSERT INTO ${this.tableName} (userId, email, destination, type, enabled) VALUES (?, ?, ?, ?, ?)`;
     const response = await this._db.prepare(sql)
@@ -38,9 +25,9 @@ export class EmailRouteRepository extends BaseRepository<EmailRouteEntity> imple
   }
 
   async update(id: number, route: EmailRouteEntity): Promise<void> {
-    const sql = `UPDATE ${this.tableName} SET email = ?, destination = ?, enabled = ? WHERE id = ?`;
+    const sql = `UPDATE ${this.tableName} SET email = ?, destination = ?, enabled = ?, \`drop\` = ? WHERE id = ?`;
     const response = await this._db.prepare(sql)
-      .bind(route.email, route.destination, route.enabled, id)
+      .bind(route.email, route.destination, route.enabled, route.drop, id)
       .run();
 
     if (!response.success) {
@@ -54,5 +41,40 @@ export class EmailRouteRepository extends BaseRepository<EmailRouteEntity> imple
       .run();
 
     return response.success;
+  }
+
+  async getByEmailAndType(email: string, type: EmailClass): Promise<EmailRouteEntity | null> {
+    const result = await this._db
+      .prepare(`SELECT * FROM ${this.tableName} WHERE email = ? AND type = ? AND enabled = 1`)
+      .bind(email, type)
+      .first<EmailRouteEntity>();
+
+    if (!result) {
+      return null;
+    }
+
+    return result;
+  }
+
+  async incrementReceived(email: string): Promise<void> {
+    const sql = `UPDATE ${this.tableName} SET received = received + 1 WHERE email = ?`;
+    const response = await this._db.prepare(sql)
+      .bind(email)
+      .run();
+
+    if (!response.success) {
+      throw new Error('Failed to increment received');
+    }
+  }
+
+  async incrementSent(email: string): Promise<void> {
+    const sql = `UPDATE ${this.tableName} SET sent = sent + 1 WHERE email = ?`;
+    const response = await this._db.prepare(sql)
+      .bind(email)
+      .run();
+
+    if (!response.success) {
+      throw new Error('Failed to increment sent');
+    }
   }
 }
